source/blender/blenkernel/intern/data_transfer.cc
@@ -5,8 +5,6 @@
  * \ingroup bke
  */
 
-#include "CLG_log.h"
-
 #include "MEM_guardedalloc.h"
 
 #include "DNA_customdata_types.h"
@@ -34,9 +32,9 @@
 #include "BKE_object_deform.h"
 #include "BKE_report.h"
 
-#include "data_transfer_intern.h"
+#include "DEG_depsgraph_query.h"
 
-static CLG_LogRef LOG = {"bke.data_transfer"};
+#include "data_transfer_intern.h"
 
 void BKE_object_data_transfer_dttypes_to_cdmask(const int dtdata_types,
                                                 CustomData_MeshMasks *r_data_masks)
@@ -319,9 +317,9 @@ static void data_transfer_mesh_attributes_transfer_default_color_string(
   }
   else if ((data_type == CD_PROP_BYTE_COLOR) &&
            !BKE_id_attribute_search(&const_cast<ID &>(mesh_src->id),
-                                                                         default_color_src,
-                                                                         CD_MASK_PROP_BYTE_COLOR,
-                                                                         ATTR_DOMAIN_MASK_COLOR)) {
+                                    default_color_src,
+                                    CD_MASK_PROP_BYTE_COLOR,
+                                    ATTR_DOMAIN_MASK_COLOR)) {
     return;
   }
 
@@ -1123,7 +1121,6 @@ static bool data_transfer_layersmapping_generate(ListBase *r_map,
 }
 
 void BKE_object_data_transfer_layout(struct Depsgraph *depsgraph,
-                                     Scene *scene,
                                      Object *ob_src,
                                      Object *ob_dst,
                                      const int data_types,
@@ -1131,20 +1128,17 @@ void BKE_object_data_transfer_layout(struct Depsgraph *depsgraph,
                                      const int fromlayers_select[DT_MULTILAYER_INDEX_MAX],
                                      const int tolayers_select[DT_MULTILAYER_INDEX_MAX])
 {
-  Mesh *me_src;
   Mesh *me_dst;
 
   const bool use_create = true; /* We always create needed layers here. */
-
-  CustomData_MeshMasks me_src_mask = CD_MASK_BAREMESH;
 
   BLI_assert((ob_src != ob_dst) && (ob_src->type == OB_MESH) && (ob_dst->type == OB_MESH));
 
   me_dst = static_cast<Mesh *>(ob_dst->data);
 
   /* Get source evaluated mesh. */
-  BKE_object_data_transfer_dttypes_to_cdmask(data_types, &me_src_mask);
-  me_src = mesh_get_eval_final(depsgraph, scene, ob_src, &me_src_mask);
+  const Object *ob_src_eval = DEG_get_evaluated_object(depsgraph, ob_src);
+  const Mesh *me_src = BKE_object_get_evaluated_mesh(ob_src_eval);
   if (!me_src) {
     return;
   }
@@ -1271,7 +1265,6 @@ void BKE_object_data_transfer_layout(struct Depsgraph *depsgraph,
 }
 
 bool BKE_object_data_transfer_ex(struct Depsgraph *depsgraph,
-                                 Scene *scene,
                                  Object *ob_src,
                                  Object *ob_dst,
                                  Mesh *me_dst,
@@ -1318,8 +1311,6 @@ bool BKE_object_data_transfer_ex(struct Depsgraph *depsgraph,
 
   const bool use_delete = false; /* We never delete data layers from destination here. */
 
-  CustomData_MeshMasks me_src_mask = CD_MASK_BAREMESH;
-
   BLI_assert((ob_src != ob_dst) && (ob_src->type == OB_MESH) && (ob_dst->type == OB_MESH));
 
   if (me_dst) {
@@ -1341,20 +1332,12 @@ bool BKE_object_data_transfer_ex(struct Depsgraph *depsgraph,
   }
 
   /* Get source evaluated mesh. */
-  BKE_object_data_transfer_dttypes_to_cdmask(data_types, &me_src_mask);
-  BKE_mesh_remap_calc_source_cddata_masks_from_map_modes(
-      map_vert_mode, map_edge_mode, map_loop_mode, map_poly_mode, &me_src_mask);
   if (is_modifier) {
     me_src = BKE_modifier_get_evaluated_mesh_from_evaluated_object(ob_src);
-
-    if (me_src == nullptr ||
-        !CustomData_MeshMasks_are_matching(&ob_src->runtime.last_data_mask, &me_src_mask)) {
-      CLOG_WARN(&LOG, "Data Transfer: source mesh data is not ready - dependency cycle?");
-      return changed;
-    }
   }
   else {
-    me_src = mesh_get_eval_final(depsgraph, scene, ob_src, &me_src_mask);
+    const Object *ob_eval = DEG_get_evaluated_object(depsgraph, ob_src);
+    me_src = BKE_object_get_evaluated_mesh(ob_eval);
   }
   if (!me_src) {
     return changed;
@@ -1772,7 +1755,6 @@ bool BKE_object_data_transfer_ex(struct Depsgraph *depsgraph,
 }
 
 bool BKE_object_data_transfer_mesh(struct Depsgraph *depsgraph,
-                                   Scene *scene,
                                    Object *ob_src,
                                    Object *ob_dst,
                                    const int data_types,
@@ -1795,7 +1777,6 @@ bool BKE_object_data_transfer_mesh(struct Depsgraph *depsgraph,
                                    ReportList *reports)
 {
   return BKE_object_data_transfer_ex(depsgraph,
-                                     scene,
                                      ob_src,
                                      ob_dst,
                                      nullptr,
