source/blender/blenkernel/intern/mesh_convert.cc
@@ -602,10 +602,8 @@ void BKE_mesh_to_curve_nurblist(const Mesh *me, ListBase *nurblist, const int ed
 
 void BKE_mesh_to_curve(Main *bmain, Depsgraph *depsgraph, Scene * /*scene*/, Object *ob)
 {
-  /* make new mesh data from the original copy */
-  Scene *scene_eval = DEG_get_evaluated_scene(depsgraph);
-  Object *ob_eval = DEG_get_evaluated_object(depsgraph, ob);
-  Mesh *me_eval = mesh_get_eval_final(depsgraph, scene_eval, ob_eval, &CD_MASK_MESH);
+  const Object *ob_eval = DEG_get_evaluated_object(depsgraph, ob);
+  const Mesh *me_eval = BKE_object_get_evaluated_mesh_no_subsurf(ob_eval);
   ListBase nurblist = {nullptr, nullptr};
 
   BKE_mesh_to_curve_nurblist(me_eval, &nurblist, 0);
@@ -635,10 +633,8 @@ void BKE_pointcloud_from_mesh(const Mesh *me, PointCloud *pointcloud)
 void BKE_mesh_to_pointcloud(Main *bmain, Depsgraph *depsgraph, Scene * /*scene*/, Object *ob)
 {
   BLI_assert(ob->type == OB_MESH);
-
-  Scene *scene_eval = DEG_get_evaluated_scene(depsgraph);
-  Object *ob_eval = DEG_get_evaluated_object(depsgraph, ob);
-  Mesh *me_eval = mesh_get_eval_final(depsgraph, scene_eval, ob_eval, &CD_MASK_MESH);
+  const Object *ob_eval = DEG_get_evaluated_object(depsgraph, ob);
+  const Mesh *me_eval = BKE_object_get_evaluated_mesh_no_subsurf(ob_eval);
 
   PointCloud *pointcloud = (PointCloud *)BKE_pointcloud_add(bmain, ob->id.name + 2);
 
